# ghqctoolkit

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  build.rs  file8f8f3a2a9d25.Rmd  lefthook.yaml  lefthook.yml
.ai/docs/: posit-workbench-proxy.md
.ai/plans/: api.md  api_test_fixture.md  api_test_fixture_phase2.md  api_test_fixture_phase3.md  api_test_fixture_phase4.md  api_testing_v1.md  interactive_relevant_files.md  relevant_files_downstream.md
.claude/: blocking_issue.md
.github/scripts/: tag_check.py
.github/workflows/: ci.yml  release.yml  ui-tests.yml
R/ghqc/: .Rbuildignore  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  rproject.toml
R/ghqc/R/: extendr-wrappers.R  ghqc.R  log.R  onLoad.R  random_port.R
R/ghqc/man/: ghqc_log.Rd  ghqc_reconnect.Rd  ghqc_status.Rd  ghqc_stop.Rd
R/ghqc/src/rust/: Cargo.toml  lib.rs
docs/: auth.md  cache.md  configuration.md  issue-approve.md  issue-comment.md  issue-create.md  issue-rename.md  issue-review.md  issue-status.md  issue-unapprove.md  milestone-archive.md  milestone-record.md  milestone-status.md  serve.md  sitrep.md
example_models/: simple_model.xlsx
openapi/: openapi.yml
scripts/: install.ps1  install.sh
src/: approve.rs  archive.rs  auth.rs  body_splitter.rs  cache.rs  comment.rs  comment_system.rs  configuration.rs  create.rs  diff_utils.rs  diffs.rs  git_info.rs  issue.rs  issues.rs  lib.rs  main.rs  qc_status.rs  record.rs  relevant_files.rs  review.rs  status.rs  test_utils.rs  utils.rs
src/api/: cache.rs  error.rs  fetch_helpers.rs  mod.rs  server.rs  state.rs
src/api/routes/: archive.rs  comments.rs  commits.rs  configuration.rs  files.rs  health.rs  issues.rs  milestones.rs  mod.rs  preview.rs  record.rs  status.rs
src/api/tests/: helpers.rs  mod.rs
src/api/types/: mod.rs  requests.rs  responses.rs
src/cli/: archive.rs  auth.rs  cache.rs  context.rs  file_parser.rs  interactive.rs  mod.rs  rename.rs  sitrep.rs  status.rs
src/cli/snapshots/: ghqctoolkit__cli__sitrep__tests__sitrep_display_custom_configuration.snap  ghqctoolkit__cli__sitrep__tests__sitrep_display_ok.snap  ghqctoolkit__cli__sitrep__tests__sitrep_display_repo_error.snap
src/git/: action.rs  api.rs  auth.rs  commit_analysis.rs  file_ops.rs  helpers.rs  local.rs  mod.rs  provider.rs  repository.rs  status.rs
src/git/api/: mod.rs  read.rs  write.rs
src/record/: images.rs  latex.rs  mod.rs  render.rs  tables.rs  typst.rs
src/record/snapshots/: ghqctoolkit__record__images__tests__create_issue_images_integration.snap
src/snapshots/: ghqctoolkit__approve__tests__qc_approve_body_with_note.snap  ghqctoolkit__approve__tests__qc_approve_body_without_note.snap  ghqctoolkit__approve__tests__qc_unapprove_body.snap  ghqctoolkit__comment__tests__comment_body_multiple_hunks.snap  ghqctoolkit__comment__tests__comment_body_no_diff_flag.snap  ghqctoolkit__comment__tests__comment_body_no_previous_commit.snap  ghqctoolkit__comment__tests__comment_body_separated_hunks.snap  ghqctoolkit__comment__tests__comment_body_single_hunk_change.snap  ghqctoolkit__configuration__tests__backtick_txt_checklist.snap  ghqctoolkit__configuration__tests__configuration_status_dirty.snap  ghqctoolkit__configuration__tests__configuration_status_with_git.snap  ghqctoolkit__configuration__tests__configuration_status_without_git.snap  ghqctoolkit__configuration__tests__custom_directory_checklist.snap  ghqctoolkit__configuration__tests__deeply_nested_yaml_checklist.snap  ghqctoolkit__configuration__tests__default_custom.snap  ghqctoolkit__configuration__tests__hierarchical_yaml_checklist.snap  ghqctoolkit__configuration__tests__simple_txt_checklist.snap  ghqctoolkit__configuration__tests__simple_yaml_checklist.snap  ghqctoolkit__create__tests__issue_body_snapshot.snap  ghqctoolkit__create__tests__issue_body_snapshot_without_rel_files.snap  ghqctoolkit__issues__tests__issue_body_snapshot_with_rel_files.snap  ghqctoolkit__qc_status__tests__analyze_complex_issue_checklist.snap  ghqctoolkit__record__tests__format_markdown_setext_headers.snap  ghqctoolkit__record__tests__record_closed_issue.snap  ghqctoolkit__record__tests__record_empty_milestones.snap  ghqctoolkit__record__tests__record_multiple_milestones.snap  ghqctoolkit__record__tests__record_only_tables.snap  ghqctoolkit__record__tests__record_reopened_issue.snap  ghqctoolkit__record__tests__record_v1_milestone.snap  ghqctoolkit__relevant_files__tests__previous_qc_diff_with_changes.snap  qchub__configuration__tests__backtick_txt_checklist.snap  qchub__configuration__tests__simple_txt_checklist.snap  qchub__issues__tests__issue_body_snapshot.snap  qchub__issues__tests__issue_body_snapshot_without_rel_files.snap
src/templates/: record.qmd  record.typ
src/ui/: mod.rs
ui/: debug-checklist.mjs  package-lock.json  package.json  playwright.config.ts  test-checklist-dropdown.mjs  tsconfig.json  vite.config.ts
ui/scripts/: gen-index-html.ts
ui/src/: config.ts  routeTree.gen.ts  router.tsx  server.ts  utils.ts
ui/tests/: checklist-display-name.spec.ts  routes.spec.ts
(+191 files in other folders)
