[package]
name = "qchub"
version = "0.1.0"
edition = "2024"

[dependencies]
gix = "0.63"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
octocrab = "0.39"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
log = "0.4"
clap = { version = "4.0", features = ["derive"], optional = true }
anyhow = { version = "1.0", optional = true }
etcetera = { version = "0.8", optional = true }
clap-verbosity-flag = { version = "2.0", optional = true }
env_logger = { version = "0.10", optional = true }

[features]
cli = [
    "dep:clap", 
    "dep:anyhow", 
    "dep:etcetera",
    "dep:clap-verbosity-flag",
    "dep:env_logger"
]

[dev-dependencies]
mockall = "0.12"
tempfile = "3.0"
insta = "1.34"

[[bin]]
name = "qchub"
required-features = ["cli"]
