[package]
name = "ghqctoolkit"
version = "0.1.0"
edition = "2024"

[dependencies]
gix = { version = "0.73", default-features = false, features = [
  # core git features
  "basic", "extras", "credentials", "worktree-mutation",
  # revision walking support
  "revision",
  # required for cloning over HTTPS:
  "blocking-network-client",
  "blocking-http-transport-reqwest-rust-tls"
]}
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
octocrab = "0.39"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
thiserror = "1.0"
log = "0.4"
etcetera = "0.8"
diff = "0.1"
regex = "1.0"
clap = { version = "4.0", features = ["derive"], optional = true }
anyhow = { version = "1.0", optional = true }
clap-verbosity-flag = { version = "2.0", optional = true }
env_logger = { version = "0.10", optional = true }
inquire = { version = "0.7", features = ["editor"], optional = true }

[features]
cli = [
    "dep:clap", 
    "dep:anyhow", 
    "dep:clap-verbosity-flag",
    "dep:env_logger",
    "dep:inquire"
]

[dev-dependencies]
mockall = "0.12"
tempfile = "3.0"
insta = "1.34"
toml = "0.8"

[[bin]]
name = "ghqc"
path = "src/main.rs"
required-features = ["cli"]
