[package]
name = "ghqctoolkit"
version = "0.1.0"
edition = "2024"

[dependencies]
gix = { version = "0.73", default-features = false, features = [
  # core git features
  "basic", "extras", "credentials", "worktree-mutation",
  # revision walking support
  "revision",
  # required for cloning over HTTPS:
  "blocking-network-client",
  "blocking-http-transport-curl"
]}
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
octocrab = "0.39"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
http = "1.0"
thiserror = "1.0"
log = "0.4"
etcetera = "0.8"
diff = "0.1"
regex = "1.0"
scraper = "0.20"
ureq = "2.0"
clap = { version = "4.0", features = ["derive"], optional = true }
anyhow = { version = "1.0", optional = true }
clap-verbosity-flag = { version = "2.0", optional = true }
env_logger = { version = "0.10", optional = true }
inquire = { version = "0.7", features = ["editor"], optional = true }
tera = "1.20"
lazy_static = "1.5"
axum = { version = "0.8", optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["cors", "trace"], optional = true }
rust-embed = { version = "8", optional = true }
open = { version = "5", optional = true }
mime_guess = { version = "2", optional = true }
tar = "0.4"
flate2 = "1.1"
calamine = "0.31.0"
lopdf = "0.38"
typst = "0.14"
typst-kit = { version = "0.14", features = ["embed-fonts"] }
typst-pdf = "0.14"
tempfile = "3.0"

[features]
cli = [
    "dep:clap",
    "dep:anyhow",
    "dep:clap-verbosity-flag",
    "dep:env_logger",
    "dep:inquire"
]
api = [
    "dep:axum",
    "dep:tower",
    "dep:tower-http",
]
ui = [
    "api",
    "dep:rust-embed",
    "dep:open",
    "dep:anyhow",
    "dep:mime_guess",
]

[dev-dependencies]
mockall = "0.12"
insta = "1.34"
toml = "0.8"
anyhow = "1.0"
urlencoding = "2.1"

[[bin]]
name = "ghqc"
path = "src/main.rs"
required-features = ["cli"]
