[package]
name = 'ghqc'
publish = false
version = '0.1.0'
edition = '2021'
rust-version = '1.65'

[lib]
crate-type = [ 'staticlib' ]
name = 'ghqc'
path = 'lib.rs'

[dependencies]
extendr-api = '0.8.1'
#ghqctoolkit = { path = "../../../../.", features = ["ui"] }
ghqctoolkit = { path = "/Users/wescummings/projects/ghqc/ghqctoolkitR", features = ["ui"] }
tokio = "1.0"
env_logger = "0.10"
log = "0.4"

[profile.release]
lto = true
codegen-units = 1
